--- a/html/introduction-to-html/getting-started/index.html
+++ b/html/introduction-to-html/getting-started/index.html
@@ -6,6 +6,11 @@
     <title>My test page</title>
   </head>
   <body>
-    <p>This is my page</p>
+    <h1>amo o binis</h1>
+    <p>amo te mesmo muito <strong>dinis</strong> a serio</p>
+    <a href='https://www.instagram.com/dinas_isaev/'> foto do dinis lindo.</a>
+   <p><img width="200" height="200" 
+ src="https://raw.githubusercontent.com/mdn/beginner-html-site/gh-pages/images/firefox-icon.png". 
+alt = "FirefoxIcon"/> </p> 
   </body>
 </html>
